Master_web_development/mod-09-container/week-04/examples/ingress/ingress-simple.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-simple
spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 90
